# auto-judge-starter-kit

./: .gitignore  AGENTS.md  CLAUDE.md  DEVELOPER_HOWTO.md  README.md  datasets.yml  fetch_pilot_dataset.sh  judges.yml  kiddie_dataset.yml  llm-config.yml  pyproject.toml  run_all_datasets.py  run_kiddie.sh
.claude/skills/autojudge-develop/: SKILL.md
.claude/skills/autojudge-setup/: SKILL.md
.claude/skills/autojudge-submit/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: integration-tests.yml
data/: README.md
data/tira-evaluator/: evaluator.py
documentation/: README.md
documentation/leaderboard-upload-skeleton/: ir-metadata.yml  trec-leaderboard.txt
judges/: __init__.py
judges/complete_example/: .devcontainer.json  Dockerfile  README.md  example_judge.py  workflow.yml
judges/ir_axioms/: Dockerfile  README.md  __init__.py  axiom_judge.py  workflow.yml
judges/langchain_pref/: langchain_judge.py
judges/minimaljudge/: __init__.py  minimal_judge.py  workflow.yml
judges/naive/: Dockerfile  README.md  __init__.py  naive_baseline.py  workflow.yml
judges/pyterrier_retrieval/: retrieval_judge.py  workflow.yml
judges/tinyjudge/: tiny_judge.py
tests/: test_endpoint_contract.py  test_examples.py  test_framework_version.py  test_workflow_consistency.py
